--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,8 @@
   --color-background-panel: #0a6a3422;
   --color-background-coin: #b7f5b7;
   --color-background-logo: #f70000;
+  --color-status-connected: #20c712;
+  --color-status-disconnected: #d81f1f;
   --color-border: #1453162b;
   --color-border-shadow: #14531673;
 
