--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 .container {
-  display: block;
+  display: flex;
+  justify-content: space-between;
   height: 5rem;
 
   .logo {
@@ -7,5 +8,20 @@
     width: 3rem;
     margin: 1rem;
     filter: drop-shadow(0px 0px 3px var(--color-background-logo));
+  }
+
+  .status {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    margin: 1rem 1.5rem;
+    cursor: default;
+
+    .connected {
+      color: var(--color-status-connected);
+    }
+
+    .disconnected {
+      color: var(--color-status-disconnected);
+    }
   }
 }
